remove Long constructors.